--- a/Omoto.Web/bower.json
+++ b/Omoto.Web/bower.json
@@ -2,6 +2,7 @@
   "name": "ASP.NET",
   "private": true,
   "dependencies": {
+    "hls.js": "~0.6.0",
     "angular-bootstrap-switch": "~0.4.1",
     "angular": "1.4.6",
     "angular-resource": "1.4.6",
@@ -11,7 +12,17 @@
     "bootstrap": "3.3.5",
     "jquery-validation": "1.14.0",
     "jquery-validation-unobtrusive": "3.2.4",
-    "socket.io-client": "1.3.7"
+    "socket.io-client": "1.3.7",
+    "requirejs": "2.1.20",
+
+    "videogular": "~1.4.3",
+    "videogular-controls": "~1.4.3",
+    "videogular-buffering": "~1.4.3",
+    "videogular-overlay-play": "~1.4.3",
+    "videogular-themes-default": "~1.4.3",
+    "videogular-poster": "~1.4.3",
+    "videogular-hls": "*"
+
   },
   "overrides": {
     "bootstrap": {
@@ -27,6 +38,9 @@
     "socket.io-client": {
       "main": "socket.io.js"
     }
+
+  },
+  "resolutions": {
+    "angular": "1.5.3"
   }
 }
-    
